@@ -1,7 +1,8 @@
 Revision history for Word-Rhymes
 
 1.03 UNREL
-        -
+        - Added new limit() parameter, limits the number of rhyming words to
+          return/display under each syllable section (closes #1)
 
 1.02    2020-12-19
         - Changed B<> tags to I<> tags in binary POD
